--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@antv/data-set": "^0.8.9",
     "@babel/polyfill": "^7.2.5",
     "animate.css": "^3.6.1",
@@ -47,9 +48,9 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.4.1",
+    "react": "^17.0.1",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.12.13",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.3.1",
